; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mastering_display_metadata.c_av_content_light_metadata_alloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mastering_display_metadata.c_av_content_light_metadata_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_content_light_metadata_alloc(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32*, align 8
  store i64* %0, i64** %2, align 8
  %4 = call i32* @av_mallocz(i32 4)
  store i32* %4, i32** %3, align 8
  %5 = load i64*, i64** %2, align 8
  %6 = icmp ne i64* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64*, i64** %2, align 8
  store i64 4, i64* %8, align 8
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i32*, i32** %3, align 8
  ret i32* %10
}

declare dso_local i32* @av_mallocz(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
